# change

./: CONTRIBUTING.md  Makefile  README.md  bibliography.md  glossary.md  pyproject.toml
01_intro/: index.md
02_gst/: index.md
02_meeting/: index.md  slides.md
03_power/: index.md
04_power/: index.md
04_start/: index.md
05_finish/: index.md
05_start/: index.md
06_finale/: index.md
06_finish/: index.md
bibliography/: index.md
bonus/: index.md
docs/: index.html
docs/01_intro/: index.html
docs/02_gst/: index.html
docs/02_meeting/: index.html  slides.html
docs/03_gst/: index.html
docs/03_power/: index.html
docs/04_power/: index.html
docs/04_start/: index.html
docs/05_finish/: index.html
docs/05_start/: index.html
docs/06_finale/: index.html
docs/06_finish/: index.html
docs/07_finale/: index.html
docs/bibliography/: index.html
docs/bonus/: index.html
docs/conduct/: index.html
docs/contrib/: index.html
docs/contributing/: index.html
docs/finale/: index.html
docs/finishing/: index.html
docs/glossary/: index.html
docs/gst/: index.html
docs/intro/: index.html
docs/license/: index.html
docs/meetings/: index.html  slides.html
docs/power/: index.html
docs/starting/: index.html
docs/static/: page.css
extras/: links.txt  words.txt
finale/: index.md
finishing/: index.md
glossary/: index.md
gst/: index.md
intro/: index.md
meetings/: index.md  slides.md
power/: index.md
starting/: index.md
static/: mccole.css  page.css
templates/: page.html
