[project]
name = "change"
description = "organizational change for open science"
version = "0.3.0"
requires-python = ">=3.13"
dependencies = [
    "mccole>=3.1.0",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks.bib]
help = "Check bibliography entries."
cmd = "mccole bib"

[tool.taskipy.tasks.clean]
help = "Clean up generated and cache files."
cmd = """
    find . -type f -name '*~' -exec rm {} \\;
    find . -type d -name __pycache__ | xargs rm -rf
    find . -type d -name .ruff_cache | xargs rm -rf
"""

[tool.taskipy.tasks.check]
help = "Check code and project."
cmd = """
    mccole check --src . --dst docs
    typos *.md */*.md
    ruff check .
"""

[tool.taskipy.tasks.serve]
help = "Serve generated HTML."
cmd = "python -m http.server -d docs"

[tool.taskipy.tasks.site]
help = "Build HTML."
cmd = """
    mccole build --src . --dst docs
    touch docs/.nojekyll
"""

[tool.mccole]
brand = "change"
skips = [
    "*~",
    "*.pdf",
    "docs/**",
    "uv.lock"
]
